chore: fix style, spacing

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav a:hover {
 
 h1 {
   font-family: Helvetica;
-  margin: 60px 30px 40px 100px;
+  margin: 60px 30px 40px 80px;
   padding-left: 50px;
 }
 
@@ -47,7 +47,7 @@ h2 {
   color: gray;
   opacity: 0.75;
   padding: 40px 0 30px 50px;
-  margin-left: 100px;
+  margin-left: 80px;
 }
 
 nav ul {
@@ -69,9 +69,9 @@ p {
   font-family: Arial;
   color: black;
   padding-left: 50px;
-  margin-left: 100px;
+  margin-left: 80px;
   margin-right: 350px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 img {
@@ -92,7 +92,7 @@ footer {
   height: 3px; */
 
   background: #666666;
-  opacity: 0.5;
+  /* opacity: 0.5; */
   color: #fff;
   padding: 30px 0;
   clear: both;
